# Migration-Intelligence-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  app.py  cloudbuild.fb_hardik.yaml  cloudbuild.yaml  main.py  migration_intelligence_agent_cebf3dea.plan.md  pyproject.toml  requirements.txt
agents/: __init__.py  adk_agents.py  analysis_agent.py  chart_selector.py  country_pipeline.py  data_collector.py  debug_inspector.py  destination_tracker.py  eda_analyst.py  evidence_generator.py  hypothesis_agent.py  orchestrator.py  pattern_detective.py  pipeline_config.py  pipeline_llm_agents.py  progress_tracker.py  prompts.py  push_factor_analyst.py  query_guard.py  relocation_scorer.py  scout_agent.py  scout_service.py  tool_router_agent.py  tool_selector.py  workflow_agents.py
analysis/: __init__.py  correlation.py  country_charts.py  eda_charts.py  stats_tools.py  visualization.py
models/: __init__.py  schemas.py
scripts/: run_once.py
static/: styles.css
templates/: cache.html  index.html
tests/: conftest.py  test_country_charts.py  test_country_codes.py  test_data_collector.py  test_eda_analyst.py  test_eda_charts.py  test_pipeline_config.py  test_query_guard.py  test_schemas.py  test_tool_selector.py
tools/: __init__.py  acled_tools.py  aqi_tools.py  artifact_store.py  climate_tools.py  country_codes.py  duckdb_tools.py  eda_tools.py  employment_tools.py  environment_tools.py  news_tools.py  teleport_tools.py  unhcr_tools.py  worldbank_tools.py
